kubernetes/apps/default/matrix/synapse/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix-synapse
spec:
  hostnames: ["matrix.hayden.moe"]
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path: {type: PathPrefix, value: /_matrix/client/api/v1/login}
        - path: {type: PathPrefix, value: /_matrix/client/api/v1/refresh}
        - path: {type: PathPrefix, value: /_matrix/client/api/v1/logout}
        - path: {type: PathPrefix, value: /_matrix/client/r0/login}
        - path: {type: PathPrefix, value: /_matrix/client/r0/refresh}
        - path: {type: PathPrefix, value: /_matrix/client/r0/logout}
        - path: {type: PathPrefix, value: /_matrix/client/v3/login}
        - path: {type: PathPrefix, value: /_matrix/client/v3/refresh}
        - path: {type: PathPrefix, value: /_matrix/client/v3/logout}
        - path: {type: PathPrefix, value: /_matrix/client/unstable/login}
        - path: {type: PathPrefix, value: /_matrix/client/unstable/refresh}
        - path: {type: PathPrefix, value: /_matrix/client/unstable/logout}
      backendRefs:
        - name: matrix-synapse-matrix-authentication-service
          port: 8080
    - matches:
        - path: {type: PathPrefix, value: /_matrix}
        - path: {type: PathPrefix, value: /_synapse}
      backendRefs:
        - name: matrix-synapse-synapse
          port: 8008

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix-mas
spec:
  hostnames: ["mas.hayden.moe"]
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path: {type: PathPrefix, value: /}
      backendRefs:
        - name: matrix-synapse-matrix-authentication-service
          port: 8080

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix-mrtc
spec:
  hostnames: ["mrtc.hayden.moe"]
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path: {type: PathPrefix, value: /sfu/get}
      backendRefs:
        - name: matrix-synapse-matrix-rtc-authorisation-service
          port: 8080
    - matches:
        - path: {type: PathPrefix, value: /}
      backendRefs:
        - name: matrix-synapse-matrix-rtc-sfu
          port: 7880

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix-element
spec:
  hostnames: ["element.hayden.moe"]
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path: {type: PathPrefix, value: /}
      backendRefs:
        - name: matrix-synapse-element-web
          port: 8080

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix-element-admin
spec:
  hostnames: ["element-admin.hayden.moe"]
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path: {type: PathPrefix, value: /}
      backendRefs:
        - name: matrix-synapse-element-admin
          port: 8080
